feat(edits): Integration in EDITS